--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
 /* CSS */
 .button-7 {
   padding: 0;
-  color: #a0a0a0;
+  color: #0000FF;
   font-size: 1.2rem;
   letter-spacing: +.5px;
   text-transform: uppercase;
