--- a/src/components/WeatherStation/Temperature/Temperature.module.css
+++ b/src/components/WeatherStation/Temperature/Temperature.module.css
@@ -6,5 +6,6 @@
     margin: .5rem 0;
 }
 .TemperatureWrapper .TemperatureSymbol {
-    font-size: 2.125rem;
+    font-size: 1.525rem;
+    font-weight: bolder;
 }
