add background gif

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'NTR', 'Arial', sans-serif;
+  /** background image */
+  background-image: url("https://media.giphy.com/media/UqMfMcU7TrNdwZEdLP/giphy.gif");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: initial;
 }
 
 .s-icon {
